# build-demo

./: LICENSE
deb/test-cmake/: CMakeLists.txt
deb/test-cmake/debian/: control
deb/test-cmake/src/: CMakeLists.txt  config.h.in  mainwindow.ui
deb/test-qmake/debian/: changelog
deb/test-qmake1/: niubi-process.pro
deb/test-qmake1/src/: niubi.desktop  niubi.pro
